--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ body{
 }
 
 .nav_wrapper li.active{
-    background-color: #9bcdd5;
+    background-color: #ff8552;
     color:white;
 }
 
@@ -80,7 +80,7 @@ body{
 
 .learn-more{
     position: relative;
-    background-color: #37393a;  
+    background-color: #ff8552;  
     padding:15px 25px; 
     margin-top:15%;
     color:white;
@@ -316,7 +316,7 @@ img.hover-shadow {
     position: relative;
     height:100px;
     width: 100%;
-    background-color: #336699;
+    background-color: #9bcdd5;
     color: white;
 }
 
@@ -325,7 +325,7 @@ img.hover-shadow {
     bottom: 0;
     height:100px;
     width: 100%;
-    background-color: #336699;
+    background-color: #9bcdd5;
     color: white;
 }
 
