--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ body{
 
 .nav_wrapper li.active{
     background-color: #ff8552;
-    color:white;
+    color:#f7fffc;
 }
 
 .nav_wrapper li:hover:not(.active){
@@ -83,7 +83,7 @@ body{
     background-color: #ff8552;  
     padding:15px 25px; 
     margin-top:15%;
-    color:white;
+    color:#f7fffc;
 }
 
 a{
@@ -197,7 +197,7 @@ a{
 /* Modal Content */
 .modal-content {
   position: relative;
-  background-color: #fefefe;
+  background-color: #f7fffc;
   margin: auto;
   padding: 0;
   max-width: max-content;
@@ -257,7 +257,7 @@ a{
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
+  color: #f7fffc;
   font-size: 12px;
   padding: 8px 12px;
   position: absolute;
@@ -269,7 +269,7 @@ a{
   text-align: center;
   background-color: black;
   padding: 2px 16px;
-  color: white;
+  color: #f7fffc;
 }
 
 img.demo {
@@ -317,7 +317,7 @@ img.hover-shadow {
     height:100px;
     width: 100%;
     background-color: #9bcdd5;
-    color: white;
+    color: #37393a;
 }
 
 .home-footer{
@@ -326,7 +326,7 @@ img.hover-shadow {
     height:100px;
     width: 100%;
     background-color: #9bcdd5;
-    color: white;
+    color: #37393a;
 }
 
 .footer-content{
