video added to dev page

--- a/styles.css
+++ b/styles.css
@@ -289,6 +289,13 @@ img.hover-shadow {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
+.video{
+  margin:auto;
+  max-width: max-content;
+  padding-bottom:5%;
+
+}
+
 .team{
     width:85%;
     display: flex;
